--- a/src/pages/blog/2020-05-06-test-blog.md
+++ b/src/pages/blog/2020-05-06-test-blog.md
@@ -8,4 +8,6 @@ featuredimage: /images/mgmt-line-diagram-2.png
 tags:
   - Ghandi
 ---
+![jojoooo](/images/mgmt-line-diagram-2.png)
+
 **If we could change ourselves, the tendencies in the world would also change. As a man changes his own nature, so does the attitude of the world change towards him.** We need not wait to see what others do.
