--- a/src/pages/blog/2020-05-06-test-blog.md
+++ b/src/pages/blog/2020-05-06-test-blog.md
@@ -4,10 +4,10 @@ title: Test blog
 date: 2020-05-06T09:08:52.160Z
 description: some inspirational quotes
 featuredpost: true
-featuredimage: /images/mgmt-line-diagram-2.png
+featuredimage: /img/mgmt-line-diagram-2.png
 tags:
   - Ghandi
 ---
-![jojoooo](/images/chemex.jpg)
+![jojoooo](/img/chemex.jpg)
 
 **If we could change ourselves, the tendencies in the world would also change. As a man changes his own nature, so does the attitude of the world change towards him.** We need not wait to see what others do.
