--- a/src/pages/blog/2020-05-06-test-blog.md
+++ b/src/pages/blog/2020-05-06-test-blog.md
@@ -1,6 +1,7 @@
 ---
 templateKey: blog-post
 title: Test blog
+specialty: test
 date: 2020-05-06T09:08:52.160Z
 description: some inspirational quotes
 featuredpost: true
