Update Blog “2020-05-06-test-blog”

--- a/src/pages/blog/2020-05-06-test-blog.md
+++ b/src/pages/blog/2020-05-06-test-blog.md
@@ -1,13 +1,13 @@
 ---
 templateKey: blog-post
-title: Test blog
-specialty: test
+title: Jaime Castillo
+specialty: Kinesiología
 date: 2020-05-06T09:08:52.160Z
 description: some inspirational quotes
 featuredpost: true
-featuredimage: /img/mgmt-line-diagram-2.png
+featuredimage: /img/jaimec.png
 tags:
-  - Ghandi
+  - Kinesiología
 ---
 ![jojoooo](/img/mgmt-line-diagram-2.png)
 
