--- a/src/pages/especialists/2020-05-06-test-blog.md
+++ b/src/pages/especialists/2020-05-06-test-blog.md
@@ -1,5 +1,5 @@
 ---
-templateKey: blog-post
+templateKey: especialist
 title: Jaime Castillo
 specialty: Kinesiología
 description: If we could change ourselves, the tendencies in the world would
