Update Specialist “2020-05-06-test-blog”

--- a/src/pages/especialists/2020-05-06-test-blog.md
+++ b/src/pages/especialists/2020-05-06-test-blog.md
@@ -8,6 +8,9 @@ description: If we could change ourselves, the tendencies in the world would
 featuredimage: /img/jaimec.png
 tags:
   - Ghandi
+categories:
+  - De perro legal
+  - mock 3
 date: 2020-05-08T09:07:34.422Z
 ---
 ![jojoooo](/img/mgmt-line-diagram-2.png)
